--- a/1/Nissannavara/97923-hitchhikers-alternate-title-a-dude-in-his-prelude/rus.textile
+++ b/1/Nissannavara/97923-hitchhikers-alternate-title-a-dude-in-his-prelude/rus.textile
@@ -1,30 +1,30 @@
-Автостопом (альтернативное название: чувак в своей прелюдии)
+РђРІС‚РѕСЃС‚РѕРїРѕРј (Р°Р»СЊС‚РµСЂРЅР°С‚РёРІРЅРѕРµ РЅР°Р·РІР°РЅРёРµ: С‡СѓРІР°Рє РІ СЃРІРѕРµР№ РїСЂРµР»СЋРґРёРё)
 
-Автор: Нисаннавара
+РђРІС‚РѕСЂ: РќРёСЃР°РЅРЅР°РІР°СЂР°
 
 *000*2024-02-12 12:20
 
-Хорошо. Вторая история, о которой я написал здесь. Также, пожалуйста, скажите мне, какой заголовок мне следует использовать. Прежде чем выбирать, прочтите первую главу.
+РҐРѕСЂРѕС€Рѕ. Р’С‚РѕСЂР°СЏ РёСЃС‚РѕСЂРёСЏ, Рѕ РєРѕС‚РѕСЂРѕР№ СЏ РЅР°РїРёСЃР°Р» Р·РґРµСЃСЊ. РўР°РєР¶Рµ, РїРѕР¶Р°Р»СѓР№СЃС‚Р°, СЃРєР°Р¶РёС‚Рµ РјРЅРµ, РєР°РєРѕР№ Р·Р°РіРѕР»РѕРІРѕРє РјРЅРµ СЃР»РµРґСѓРµС‚ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ. РџСЂРµР¶РґРµ С‡РµРј РІС‹Р±РёСЂР°С‚СЊ, РїСЂРѕС‡С‚РёС‚Рµ РїРµСЂРІСѓСЋ РіР»Р°РІСѓ.
 
-Сейчас 4 января 2023 года, новый год только начался, всё ещё готовятся к работе, но я начинаю работу где-то в феврале, так что у меня осталось чуть больше месяца. В то верное утро я никогда не знал, что произойдёт в тот день. «Чёрт, я хочу закончить этот проект машины или хотя бы запустить её», — подумал я про себя, всё ещё скучая в 10 утра. Я сидел на диване и думал, что делать. Итак, я выхожу на улицу и стягиваю брезент со своей Honda Prelude 2001 года выпуска в довольно хорошем состоянии. Я открываю капот и смотрю на B16, который я заменил на него несколько месяцев назад. Но потом я понял, что в последний раз, когда ехал на нём, я превратил третью передачу в выдержанное прекрасное молоко. Итак, я осматриваю свой «дом», который с таким же успехом можно считать проклятым разрушением из-за того, сколько случайных автомобильных запчастей у меня валялось. В конце концов я нашёл трансмиссию, которая подойдёт для B16. И после нескольких часов криков, поездки в скорую помощь, множества ругательств, кровавого пота и слёз я включил передачу.
+РЎРµР№С‡Р°СЃ 4 СЏРЅРІР°СЂСЏ 2023 РіРѕРґР°, РЅРѕРІС‹Р№ РіРѕРґ С‚РѕР»СЊРєРѕ РЅР°С‡Р°Р»СЃСЏ, РІСЃС‘ РµС‰С‘ РіРѕС‚РѕРІСЏС‚СЃСЏ Рє СЂР°Р±РѕС‚Рµ, РЅРѕ СЏ РЅР°С‡РёРЅР°СЋ СЂР°Р±РѕС‚Сѓ РіРґРµ-С‚Рѕ РІ С„РµРІСЂР°Р»Рµ, С‚Р°Рє С‡С‚Рѕ Сѓ РјРµРЅСЏ РѕСЃС‚Р°Р»РѕСЃСЊ С‡СѓС‚СЊ Р±РѕР»СЊС€Рµ РјРµСЃСЏС†Р°. Р’ С‚Рѕ РІРµСЂРЅРѕРµ СѓС‚СЂРѕ СЏ РЅРёРєРѕРіРґР° РЅРµ Р·РЅР°Р», С‡С‚Рѕ РїСЂРѕРёР·РѕР№РґС‘С‚ РІ С‚РѕС‚ РґРµРЅСЊ. В«Р§С‘СЂС‚, СЏ С…РѕС‡Сѓ Р·Р°РєРѕРЅС‡РёС‚СЊ СЌС‚РѕС‚ РїСЂРѕРµРєС‚ РјР°С€РёРЅС‹ РёР»Рё С…РѕС‚СЏ Р±С‹ Р·Р°РїСѓСЃС‚РёС‚СЊ РµС‘В», вЂ” РїРѕРґСѓРјР°Р» СЏ РїСЂРѕ СЃРµР±СЏ, РІСЃС‘ РµС‰С‘ СЃРєСѓС‡Р°СЏ РІ 10 СѓС‚СЂР°. РЇ СЃРёРґРµР» РЅР° РґРёРІР°РЅРµ Рё РґСѓРјР°Р», С‡С‚Рѕ РґРµР»Р°С‚СЊ. РС‚Р°Рє, СЏ РІС‹С…РѕР¶Сѓ РЅР° СѓР»РёС†Сѓ Рё СЃС‚СЏРіРёРІР°СЋ Р±СЂРµР·РµРЅС‚ СЃРѕ СЃРІРѕРµР№ Honda Prelude 2001 РіРѕРґР° РІС‹РїСѓСЃРєР° РІ РґРѕРІРѕР»СЊРЅРѕ С…РѕСЂРѕС€РµРј СЃРѕСЃС‚РѕСЏРЅРёРё. РЇ РѕС‚РєСЂС‹РІР°СЋ РєР°РїРѕС‚ Рё СЃРјРѕС‚СЂСЋ РЅР° B16, РєРѕС‚РѕСЂС‹Р№ СЏ Р·Р°РјРµРЅРёР» РЅР° РЅРµРіРѕ РЅРµСЃРєРѕР»СЊРєРѕ РјРµСЃСЏС†РµРІ РЅР°Р·Р°Рґ. РќРѕ РїРѕС‚РѕРј СЏ РїРѕРЅСЏР», С‡С‚Рѕ РІ РїРѕСЃР»РµРґРЅРёР№ СЂР°Р·, РєРѕРіРґР° РµС…Р°Р» РЅР° РЅС‘Рј, СЏ РїСЂРµРІСЂР°С‚РёР» С‚СЂРµС‚СЊСЋ РїРµСЂРµРґР°С‡Сѓ РІ РІС‹РґРµСЂР¶Р°РЅРЅРѕРµ РїСЂРµРєСЂР°СЃРЅРѕРµ РјРѕР»РѕРєРѕ. РС‚Р°Рє, СЏ РѕСЃРјР°С‚СЂРёРІР°СЋ СЃРІРѕР№ В«РґРѕРјВ», РєРѕС‚РѕСЂС‹Р№ СЃ С‚Р°РєРёРј Р¶Рµ СѓСЃРїРµС…РѕРј РјРѕР¶РЅРѕ СЃС‡РёС‚Р°С‚СЊ РїСЂРѕРєР»СЏС‚С‹Рј СЂР°Р·СЂСѓС€РµРЅРёРµРј РёР·-Р·Р° С‚РѕРіРѕ, СЃРєРѕР»СЊРєРѕ СЃР»СѓС‡Р°Р№РЅС‹С… Р°РІС‚РѕРјРѕР±РёР»СЊРЅС‹С… Р·Р°РїС‡Р°СЃС‚РµР№ Сѓ РјРµРЅСЏ РІР°Р»СЏР»РѕСЃСЊ. Р’ РєРѕРЅС†Рµ РєРѕРЅС†РѕРІ СЏ РЅР°С€С‘Р» С‚СЂР°РЅСЃРјРёСЃСЃРёСЋ, РєРѕС‚РѕСЂР°СЏ РїРѕРґРѕР№РґС‘С‚ РґР»СЏ B16. Р РїРѕСЃР»Рµ РЅРµСЃРєРѕР»СЊРєРёС… С‡Р°СЃРѕРІ РєСЂРёРєРѕРІ, РїРѕРµР·РґРєРё РІ СЃРєРѕСЂСѓСЋ РїРѕРјРѕС‰СЊ, РјРЅРѕР¶РµСЃС‚РІР° СЂСѓРіР°С‚РµР»СЊСЃС‚РІ, РєСЂРѕРІР°РІРѕРіРѕ РїРѕС‚Р° Рё СЃР»С‘Р· СЏ РІРєР»СЋС‡РёР» РїРµСЂРµРґР°С‡Сѓ.
 
-После дня, когда я снова сидел и думал. Я начинаю выпрямлять некоторые панели на нём, а затем включаю тормоза и всё такое. А потом я купил трехспицевые колёса на рынке по 50 долларов за штуку. А надену их плюс спортивные шины в качестве обуви, и она, вероятно, будет готова сделать 3-ю передачу дополнительной нейтральной. Я отправляюсь в путь и, ведя машину, вижу женщину, стоящую на обочине дороги в спортивной одежде. Она была очень фигуристая, с чёрными волосами и в кепке. и даже с дороги я мог видеть, как у неё выпирает мочевой пузырь. Меня это удивило, но я остановился и опустил окно со стороны пассажира. «Эй, ты в порядке?» — спрашиваю я, стараясь не смотреть на её грудь и не смотреть ей в глаза. Женщины всю мою жизнь гадили на меня, поэтому мне очень страшно с ней разговаривать, но, отложив в сторону свои страхи, я всё равно убедился, что с ней всё в порядке.
+РџРѕСЃР»Рµ РґРЅСЏ, РєРѕРіРґР° СЏ СЃРЅРѕРІР° СЃРёРґРµР» Рё РґСѓРјР°Р». РЇ РЅР°С‡РёРЅР°СЋ РІС‹РїСЂСЏРјР»СЏС‚СЊ РЅРµРєРѕС‚РѕСЂС‹Рµ РїР°РЅРµР»Рё РЅР° РЅС‘Рј, Р° Р·Р°С‚РµРј РІРєР»СЋС‡Р°СЋ С‚РѕСЂРјРѕР·Р° Рё РІСЃС‘ С‚Р°РєРѕРµ. Рђ РїРѕС‚РѕРј СЏ РєСѓРїРёР» С‚СЂРµС…СЃРїРёС†РµРІС‹Рµ РєРѕР»С‘СЃР° РЅР° СЂС‹РЅРєРµ РїРѕ 50 РґРѕР»Р»Р°СЂРѕРІ Р·Р° С€С‚СѓРєСѓ. Рђ РЅР°РґРµРЅСѓ РёС… РїР»СЋСЃ СЃРїРѕСЂС‚РёРІРЅС‹Рµ С€РёРЅС‹ РІ РєР°С‡РµСЃС‚РІРµ РѕР±СѓРІРё, Рё РѕРЅР°, РІРµСЂРѕСЏС‚РЅРѕ, Р±СѓРґРµС‚ РіРѕС‚РѕРІР° СЃРґРµР»Р°С‚СЊ 3-СЋ РїРµСЂРµРґР°С‡Сѓ РґРѕРїРѕР»РЅРёС‚РµР»СЊРЅРѕР№ РЅРµР№С‚СЂР°Р»СЊРЅРѕР№. РЇ РѕС‚РїСЂР°РІР»СЏСЋСЃСЊ РІ РїСѓС‚СЊ Рё, РІРµРґСЏ РјР°С€РёРЅСѓ, РІРёР¶Сѓ Р¶РµРЅС‰РёРЅСѓ, СЃС‚РѕСЏС‰СѓСЋ РЅР° РѕР±РѕС‡РёРЅРµ РґРѕСЂРѕРіРё РІ СЃРїРѕСЂС‚РёРІРЅРѕР№ РѕРґРµР¶РґРµ. РћРЅР° Р±С‹Р»Р° РѕС‡РµРЅСЊ С„РёРіСѓСЂРёСЃС‚Р°СЏ, СЃ С‡С‘СЂРЅС‹РјРё РІРѕР»РѕСЃР°РјРё Рё РІ РєРµРїРєРµ. Рё РґР°Р¶Рµ СЃ РґРѕСЂРѕРіРё СЏ РјРѕРі РІРёРґРµС‚СЊ, РєР°Рє Сѓ РЅРµС‘ РІС‹РїРёСЂР°РµС‚ РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ. РњРµРЅСЏ СЌС‚Рѕ СѓРґРёРІРёР»Рѕ, РЅРѕ СЏ РѕСЃС‚Р°РЅРѕРІРёР»СЃСЏ Рё РѕРїСѓСЃС‚РёР» РѕРєРЅРѕ СЃРѕ СЃС‚РѕСЂРѕРЅС‹ РїР°СЃСЃР°Р¶РёСЂР°. В«Р­Р№, С‚С‹ РІ РїРѕСЂСЏРґРєРµ?В» вЂ” СЃРїСЂР°С€РёРІР°СЋ СЏ, СЃС‚Р°СЂР°СЏСЃСЊ РЅРµ СЃРјРѕС‚СЂРµС‚СЊ РЅР° РµС‘ РіСЂСѓРґСЊ Рё РЅРµ СЃРјРѕС‚СЂРµС‚СЊ РµР№ РІ РіР»Р°Р·Р°. Р–РµРЅС‰РёРЅС‹ РІСЃСЋ РјРѕСЋ Р¶РёР·РЅСЊ РіР°РґРёР»Рё РЅР° РјРµРЅСЏ, РїРѕСЌС‚РѕРјСѓ РјРЅРµ РѕС‡РµРЅСЊ СЃС‚СЂР°С€РЅРѕ СЃ РЅРµР№ СЂР°Р·РіРѕРІР°СЂРёРІР°С‚СЊ, РЅРѕ, РѕС‚Р»РѕР¶РёРІ РІ СЃС‚РѕСЂРѕРЅСѓ СЃРІРѕРё СЃС‚СЂР°С…Рё, СЏ РІСЃС‘ СЂР°РІРЅРѕ СѓР±РµРґРёР»СЃСЏ, С‡С‚Рѕ СЃ РЅРµР№ РІСЃС‘ РІ РїРѕСЂСЏРґРєРµ.
 
-«Ух, да… хотя мне действительно нужно в туалет». Она ответила застенчивым тоном. Честно говоря, я ожидала, что мне скажут «облажаться, выглядя ааа», как поступило бы большинство девушек, с которыми я не близок. «Тебя подвезти?» Я отвечаю. «Ага, да, в ближайший туалет, пожалуйста…» — отвечает она тем же застенчивым тоном, что и раньше.
+В«РЈС…, РґР°вЂ¦ С…РѕС‚СЏ РјРЅРµ РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ РЅСѓР¶РЅРѕ РІ С‚СѓР°Р»РµС‚В». РћРЅР° РѕС‚РІРµС‚РёР»Р° Р·Р°СЃС‚РµРЅС‡РёРІС‹Рј С‚РѕРЅРѕРј. Р§РµСЃС‚РЅРѕ РіРѕРІРѕСЂСЏ, СЏ РѕР¶РёРґР°Р»Р°, С‡С‚Рѕ РјРЅРµ СЃРєР°Р¶СѓС‚ В«РѕР±Р»Р°Р¶Р°С‚СЊСЃСЏ, РІС‹РіР»СЏРґСЏ Р°Р°Р°В», РєР°Рє РїРѕСЃС‚СѓРїРёР»Рѕ Р±С‹ Р±РѕР»СЊС€РёРЅСЃС‚РІРѕ РґРµРІСѓС€РµРє, СЃ РєРѕС‚РѕСЂС‹РјРё СЏ РЅРµ Р±Р»РёР·РѕРє. В«РўРµР±СЏ РїРѕРґРІРµР·С‚Рё?В» РЇ РѕС‚РІРµС‡Р°СЋ. В«РђРіР°, РґР°, РІ Р±Р»РёР¶Р°Р№С€РёР№ С‚СѓР°Р»РµС‚, РїРѕР¶Р°Р»СѓР№СЃС‚Р°вЂ¦В» вЂ” РѕС‚РІРµС‡Р°РµС‚ РѕРЅР° С‚РµРј Р¶Рµ Р·Р°СЃС‚РµРЅС‡РёРІС‹Рј С‚РѕРЅРѕРј, С‡С‚Рѕ Рё СЂР°РЅСЊС€Рµ.
 
-«Конечно. Заходите». Я отвечаю. Я наблюдаю, как она танцует небольшой танец мочи, пытаясь открыть пассажирскую дверь. Я начинаю ехать, когда она пристёгивает ремень безопасности. В основном тихо, из-за случайных светских разговоров и её передвижения, время от времени хныкающего, в этот момент я превышаю предел на 20 по шоссе, пытаясь быстрее добраться до ближайшего общественного туалета, чтобы она не чувствовала себя некомфортно. слишком долго. Я поставил бег на 90-е, поэтому чувствую, что езжу лучше, хотя, вероятно, езжу медленнее, чем раньше. «Ух, эй, я не думаю, что смогу это сделать, я очень скоро обсочусь, мне очень жаль». Я слышу, как она говорит, я слышу, как она сдерживает слёзы, и слышу какие-то шипящие звуки, доносящиеся рядом со мной. Я говорю: «О, ЧЕРТЬ, НЕ ТОПЛИВОПРОВОД», потому что она вела себя так тихо, что я забыл, что она здесь, и собиралась обссаться. Поэтому я предположил, что топливная или вакуумная магистраль оторвалась или лопнула. «Это не топливопровод…» — слышу я её слова. «О, слава богу», — говорю я в ответ, всё в порядке, я не против несчастного случая.
+В«РљРѕРЅРµС‡РЅРѕ. Р—Р°С…РѕРґРёС‚РµВ». РЇ РѕС‚РІРµС‡Р°СЋ. РЇ РЅР°Р±Р»СЋРґР°СЋ, РєР°Рє РѕРЅР° С‚Р°РЅС†СѓРµС‚ РЅРµР±РѕР»СЊС€РѕР№ С‚Р°РЅРµС† РјРѕС‡Рё, РїС‹С‚Р°СЏСЃСЊ РѕС‚РєСЂС‹С‚СЊ РїР°СЃСЃР°Р¶РёСЂСЃРєСѓСЋ РґРІРµСЂСЊ. РЇ РЅР°С‡РёРЅР°СЋ РµС…Р°С‚СЊ, РєРѕРіРґР° РѕРЅР° РїСЂРёСЃС‚С‘РіРёРІР°РµС‚ СЂРµРјРµРЅСЊ Р±РµР·РѕРїР°СЃРЅРѕСЃС‚Рё. Р’ РѕСЃРЅРѕРІРЅРѕРј С‚РёС…Рѕ, РёР·-Р·Р° СЃР»СѓС‡Р°Р№РЅС‹С… СЃРІРµС‚СЃРєРёС… СЂР°Р·РіРѕРІРѕСЂРѕРІ Рё РµС‘ РїРµСЂРµРґРІРёР¶РµРЅРёСЏ, РІСЂРµРјСЏ РѕС‚ РІСЂРµРјРµРЅРё С…РЅС‹РєР°СЋС‰РµРіРѕ, РІ СЌС‚РѕС‚ РјРѕРјРµРЅС‚ СЏ РїСЂРµРІС‹С€Р°СЋ РїСЂРµРґРµР» РЅР° 20 РїРѕ С€РѕСЃСЃРµ, РїС‹С‚Р°СЏСЃСЊ Р±С‹СЃС‚СЂРµРµ РґРѕР±СЂР°С‚СЊСЃСЏ РґРѕ Р±Р»РёР¶Р°Р№С€РµРіРѕ РѕР±С‰РµСЃС‚РІРµРЅРЅРѕРіРѕ С‚СѓР°Р»РµС‚Р°, С‡С‚РѕР±С‹ РѕРЅР° РЅРµ С‡СѓРІСЃС‚РІРѕРІР°Р»Р° СЃРµР±СЏ РЅРµРєРѕРјС„РѕСЂС‚РЅРѕ. СЃР»РёС€РєРѕРј РґРѕР»РіРѕ. РЇ РїРѕСЃС‚Р°РІРёР» Р±РµРі РЅР° 90-Рµ, РїРѕСЌС‚РѕРјСѓ С‡СѓРІСЃС‚РІСѓСЋ, С‡С‚Рѕ РµР·Р¶Сѓ Р»СѓС‡С€Рµ, С…РѕС‚СЏ, РІРµСЂРѕСЏС‚РЅРѕ, РµР·Р¶Сѓ РјРµРґР»РµРЅРЅРµРµ, С‡РµРј СЂР°РЅСЊС€Рµ. В«РЈС…, СЌР№, СЏ РЅРµ РґСѓРјР°СЋ, С‡С‚Рѕ СЃРјРѕРіСѓ СЌС‚Рѕ СЃРґРµР»Р°С‚СЊ, СЏ РѕС‡РµРЅСЊ СЃРєРѕСЂРѕ РѕР±СЃРѕС‡СѓСЃСЊ, РјРЅРµ РѕС‡РµРЅСЊ Р¶Р°Р»СЊВ». РЇ СЃР»С‹С€Сѓ, РєР°Рє РѕРЅР° РіРѕРІРѕСЂРёС‚, СЏ СЃР»С‹С€Сѓ, РєР°Рє РѕРЅР° СЃРґРµСЂР¶РёРІР°РµС‚ СЃР»С‘Р·С‹, Рё СЃР»С‹С€Сѓ РєР°РєРёРµ-С‚Рѕ С€РёРїСЏС‰РёРµ Р·РІСѓРєРё, РґРѕРЅРѕСЃСЏС‰РёРµСЃСЏ СЂСЏРґРѕРј СЃРѕ РјРЅРѕР№. РЇ РіРѕРІРѕСЂСЋ: В«Рћ, Р§Р•Р РўР¬, РќР• РўРћРџР›РР’РћРџР РћР’РћР”В», РїРѕС‚РѕРјСѓ С‡С‚Рѕ РѕРЅР° РІРµР»Р° СЃРµР±СЏ С‚Р°Рє С‚РёС…Рѕ, С‡С‚Рѕ СЏ Р·Р°Р±С‹Р», С‡С‚Рѕ РѕРЅР° Р·РґРµСЃСЊ, Рё СЃРѕР±РёСЂР°Р»Р°СЃСЊ РѕР±СЃСЃР°С‚СЊСЃСЏ. РџРѕСЌС‚РѕРјСѓ СЏ РїСЂРµРґРїРѕР»РѕР¶РёР», С‡С‚Рѕ С‚РѕРїР»РёРІРЅР°СЏ РёР»Рё РІР°РєСѓСѓРјРЅР°СЏ РјР°РіРёСЃС‚СЂР°Р»СЊ РѕС‚РѕСЂРІР°Р»Р°СЃСЊ РёР»Рё Р»РѕРїРЅСѓР»Р°. В«Р­С‚Рѕ РЅРµ С‚РѕРїР»РёРІРѕРїСЂРѕРІРѕРґвЂ¦В» вЂ” СЃР»С‹С€Сѓ СЏ РµС‘ СЃР»РѕРІР°. В«Рћ, СЃР»Р°РІР° Р±РѕРіСѓВ», вЂ” РіРѕРІРѕСЂСЋ СЏ РІ РѕС‚РІРµС‚, РІСЃС‘ РІ РїРѕСЂСЏРґРєРµ, СЏ РЅРµ РїСЂРѕС‚РёРІ РЅРµСЃС‡Р°СЃС‚РЅРѕРіРѕ СЃР»СѓС‡Р°СЏ.
 
 *001*2024-02-16 06:07
 
-Часть 2:
+Р§Р°СЃС‚СЊ 2:
 
-«Хорошо, слава богу», — отвечает она в ответ. «Эй как тебя зовут?» Я спрашиваю. «О, меня зовут Сара, а тебя?» Она отвечает, немного менее застенчиво, чем раньше: «Меня зовут Тайлер, приятно познакомиться». Я отвечаю. — Куда ты хочешь, чтобы я тебя высадил? «Угу, прямо в начале Холлестер-стрит» «хорошо, конечно» мы едем на Холлистер-стрит, которая находится примерно в 10 минутах езды. В конце концов мы добираемся туда, и я высаживаю её в начале Холлестер-стрит, как она сказала. Мы прощаемся, и я уезжаю.
+В«РҐРѕСЂРѕС€Рѕ, СЃР»Р°РІР° Р±РѕРіСѓВ», вЂ” РѕС‚РІРµС‡Р°РµС‚ РѕРЅР° РІ РѕС‚РІРµС‚. В«Р­Р№ РєР°Рє С‚РµР±СЏ Р·РѕРІСѓС‚?В» РЇ СЃРїСЂР°С€РёРІР°СЋ. В«Рћ, РјРµРЅСЏ Р·РѕРІСѓС‚ РЎР°СЂР°, Р° С‚РµР±СЏ?В» РћРЅР° РѕС‚РІРµС‡Р°РµС‚, РЅРµРјРЅРѕРіРѕ РјРµРЅРµРµ Р·Р°СЃС‚РµРЅС‡РёРІРѕ, С‡РµРј СЂР°РЅСЊС€Рµ: В«РњРµРЅСЏ Р·РѕРІСѓС‚ РўР°Р№Р»РµСЂ, РїСЂРёСЏС‚РЅРѕ РїРѕР·РЅР°РєРѕРјРёС‚СЊСЃСЏВ». РЇ РѕС‚РІРµС‡Р°СЋ. вЂ” РљСѓРґР° С‚С‹ С…РѕС‡РµС€СЊ, С‡С‚РѕР±С‹ СЏ С‚РµР±СЏ РІС‹СЃР°РґРёР»? В«РЈРіСѓ, РїСЂСЏРјРѕ РІ РЅР°С‡Р°Р»Рµ РҐРѕР»Р»РµСЃС‚РµСЂ-СЃС‚СЂРёС‚В» В«С…РѕСЂРѕС€Рѕ, РєРѕРЅРµС‡РЅРѕВ» РјС‹ РµРґРµРј РЅР° РҐРѕР»Р»РёСЃС‚РµСЂ-СЃС‚СЂРёС‚, РєРѕС‚РѕСЂР°СЏ РЅР°С…РѕРґРёС‚СЃСЏ РїСЂРёРјРµСЂРЅРѕ РІ 10 РјРёРЅСѓС‚Р°С… РµР·РґС‹. Р’ РєРѕРЅС†Рµ РєРѕРЅС†РѕРІ РјС‹ РґРѕР±РёСЂР°РµРјСЃСЏ С‚СѓРґР°, Рё СЏ РІС‹СЃР°Р¶РёРІР°СЋ РµС‘ РІ РЅР°С‡Р°Р»Рµ РҐРѕР»Р»РµСЃС‚РµСЂ-СЃС‚СЂРёС‚, РєР°Рє РѕРЅР° СЃРєР°Р·Р°Р»Р°. РњС‹ РїСЂРѕС‰Р°РµРјСЃСЏ, Рё СЏ СѓРµР·Р¶Р°СЋ.
 
-Несколько дней спустя я решаю спуститься на пляж на закате и припарковаться на ближайшей к пляжу парковке (которая также может быть отдельно от пляжа), чтобы сделать несколько фотографий прелюдии. Когда я примерно на полпути снимал несколько клипов и фотографировал их, меня постучали по плечу, из-за чего я упал на спину, как персонаж мультфильма. Поскольку теперь я смотрю прямо вверх, я вижу знакомое лицо. — О, привет, Сара! — говорю я, поднимаясь на ноги. — Привет, Тайлер. Она отвечает, теперь уже почти без застенчивости в голосе. Мы немного болтаем, а затем решаем надеть плавки и зайти в воду, примерно через час мы выходим, и когда мы прощаемся, Сара говорит: «О, чувак, мне действительно нужно в туалет прямо сейчас!» Она говорит с лёгкой ухмылкой на лице: «Ах, почему ты ухмыляешься?» — спрашиваю я, всё ещё не понимая, почему она ухмыляется. «Нет причин», — отвечает она. «Хорошо».
+РќРµСЃРєРѕР»СЊРєРѕ РґРЅРµР№ СЃРїСѓСЃС‚СЏ СЏ СЂРµС€Р°СЋ СЃРїСѓСЃС‚РёС‚СЊСЃСЏ РЅР° РїР»СЏР¶ РЅР° Р·Р°РєР°С‚Рµ Рё РїСЂРёРїР°СЂРєРѕРІР°С‚СЊСЃСЏ РЅР° Р±Р»РёР¶Р°Р№С€РµР№ Рє РїР»СЏР¶Сѓ РїР°СЂРєРѕРІРєРµ (РєРѕС‚РѕСЂР°СЏ С‚Р°РєР¶Рµ РјРѕР¶РµС‚ Р±С‹С‚СЊ РѕС‚РґРµР»СЊРЅРѕ РѕС‚ РїР»СЏР¶Р°), С‡С‚РѕР±С‹ СЃРґРµР»Р°С‚СЊ РЅРµСЃРєРѕР»СЊРєРѕ С„РѕС‚РѕРіСЂР°С„РёР№ РїСЂРµР»СЋРґРёРё. РљРѕРіРґР° СЏ РїСЂРёРјРµСЂРЅРѕ РЅР° РїРѕР»РїСѓС‚Рё СЃРЅРёРјР°Р» РЅРµСЃРєРѕР»СЊРєРѕ РєР»РёРїРѕРІ Рё С„РѕС‚РѕРіСЂР°С„РёСЂРѕРІР°Р» РёС…, РјРµРЅСЏ РїРѕСЃС‚СѓС‡Р°Р»Рё РїРѕ РїР»РµС‡Сѓ, РёР·-Р·Р° С‡РµРіРѕ СЏ СѓРїР°Р» РЅР° СЃРїРёРЅСѓ, РєР°Рє РїРµСЂСЃРѕРЅР°Р¶ РјСѓР»СЊС‚С„РёР»СЊРјР°. РџРѕСЃРєРѕР»СЊРєСѓ С‚РµРїРµСЂСЊ СЏ СЃРјРѕС‚СЂСЋ РїСЂСЏРјРѕ РІРІРµСЂС…, СЏ РІРёР¶Сѓ Р·РЅР°РєРѕРјРѕРµ Р»РёС†Рѕ. вЂ” Рћ, РїСЂРёРІРµС‚, РЎР°СЂР°! вЂ” РіРѕРІРѕСЂСЋ СЏ, РїРѕРґРЅРёРјР°СЏСЃСЊ РЅР° РЅРѕРіРё. вЂ” РџСЂРёРІРµС‚, РўР°Р№Р»РµСЂ. РћРЅР° РѕС‚РІРµС‡Р°РµС‚, С‚РµРїРµСЂСЊ СѓР¶Рµ РїРѕС‡С‚Рё Р±РµР· Р·Р°СЃС‚РµРЅС‡РёРІРѕСЃС‚Рё РІ РіРѕР»РѕСЃРµ. РњС‹ РЅРµРјРЅРѕРіРѕ Р±РѕР»С‚Р°РµРј, Р° Р·Р°С‚РµРј СЂРµС€Р°РµРј РЅР°РґРµС‚СЊ РїР»Р°РІРєРё Рё Р·Р°Р№С‚Рё РІ РІРѕРґСѓ, РїСЂРёРјРµСЂРЅРѕ С‡РµСЂРµР· С‡Р°СЃ РјС‹ РІС‹С…РѕРґРёРј, Рё РєРѕРіРґР° РјС‹ РїСЂРѕС‰Р°РµРјСЃСЏ, РЎР°СЂР° РіРѕРІРѕСЂРёС‚: В«Рћ, С‡СѓРІР°Рє, РјРЅРµ РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ РЅСѓР¶РЅРѕ РІ С‚СѓР°Р»РµС‚ РїСЂСЏРјРѕ СЃРµР№С‡Р°СЃ!В» РћРЅР° РіРѕРІРѕСЂРёС‚ СЃ Р»С‘РіРєРѕР№ СѓС…РјС‹Р»РєРѕР№ РЅР° Р»РёС†Рµ: В«РђС…, РїРѕС‡РµРјСѓ С‚С‹ СѓС…РјС‹Р»СЏРµС€СЊСЃСЏ?В» вЂ” СЃРїСЂР°С€РёРІР°СЋ СЏ, РІСЃС‘ РµС‰С‘ РЅРµ РїРѕРЅРёРјР°СЏ, РїРѕС‡РµРјСѓ РѕРЅР° СѓС…РјС‹Р»СЏРµС‚СЃСЏ. В«РќРµС‚ РїСЂРёС‡РёРЅВ», вЂ” РѕС‚РІРµС‡Р°РµС‚ РѕРЅР°. В«РҐРѕСЂРѕС€РѕВ».
 
-После того, как она переоделась, она немного танцует с мочой, затем скрещивает свои стройные красивые ноги, а затем разворачивается, выставляя вперёд свою большую попу. Я удивляюсь этому и думаю: «Что могло случиться за те несколько дней, что заставило её сейчас так себя вести?»
+РџРѕСЃР»Рµ С‚РѕРіРѕ, РєР°Рє РѕРЅР° РїРµСЂРµРѕРґРµР»Р°СЃСЊ, РѕРЅР° РЅРµРјРЅРѕРіРѕ С‚Р°РЅС†СѓРµС‚ СЃ РјРѕС‡РѕР№, Р·Р°С‚РµРј СЃРєСЂРµС‰РёРІР°РµС‚ СЃРІРѕРё СЃС‚СЂРѕР№РЅС‹Рµ РєСЂР°СЃРёРІС‹Рµ РЅРѕРіРё, Р° Р·Р°С‚РµРј СЂР°Р·РІРѕСЂР°С‡РёРІР°РµС‚СЃСЏ, РІС‹СЃС‚Р°РІР»СЏСЏ РІРїРµСЂС‘Рґ СЃРІРѕСЋ Р±РѕР»СЊС€СѓСЋ РїРѕРїСѓ. РЇ СѓРґРёРІР»СЏСЋСЃСЊ СЌС‚РѕРјСѓ Рё РґСѓРјР°СЋ: В«Р§С‚Рѕ РјРѕРіР»Рѕ СЃР»СѓС‡РёС‚СЊСЃСЏ Р·Р° С‚Рµ РЅРµСЃРєРѕР»СЊРєРѕ РґРЅРµР№, С‡С‚Рѕ Р·Р°СЃС‚Р°РІРёР»Рѕ РµС‘ СЃРµР№С‡Р°СЃ С‚Р°Рє СЃРµР±СЏ РІРµСЃС‚Рё?В»
 
-Затем она подходит, перекрещивая брёвна каждые несколько метров, предположительно, пытаясь удержаться от протечки. Но я замечаю небольшое мокрое пятно на её узких джинсовых шортах. Когда она подходит ко мне, она говорит: «Садись в машину», «Почему?» Я отвечаю в ответ. — Просто заткнись и езжай. Она отвечает: «Ух, ок?»
+Р—Р°С‚РµРј РѕРЅР° РїРѕРґС…РѕРґРёС‚, РїРµСЂРµРєСЂРµС‰РёРІР°СЏ Р±СЂС‘РІРЅР° РєР°Р¶РґС‹Рµ РЅРµСЃРєРѕР»СЊРєРѕ РјРµС‚СЂРѕРІ, РїСЂРµРґРїРѕР»РѕР¶РёС‚РµР»СЊРЅРѕ, РїС‹С‚Р°СЏСЃСЊ СѓРґРµСЂР¶Р°С‚СЊСЃСЏ РѕС‚ РїСЂРѕС‚РµС‡РєРё. РќРѕ СЏ Р·Р°РјРµС‡Р°СЋ РЅРµР±РѕР»СЊС€РѕРµ РјРѕРєСЂРѕРµ РїСЏС‚РЅРѕ РЅР° РµС‘ СѓР·РєРёС… РґР¶РёРЅСЃРѕРІС‹С… С€РѕСЂС‚Р°С…. РљРѕРіРґР° РѕРЅР° РїРѕРґС…РѕРґРёС‚ РєРѕ РјРЅРµ, РѕРЅР° РіРѕРІРѕСЂРёС‚: В«РЎР°РґРёСЃСЊ РІ РјР°С€РёРЅСѓВ», В«РџРѕС‡РµРјСѓ?В» РЇ РѕС‚РІРµС‡Р°СЋ РІ РѕС‚РІРµС‚. вЂ” РџСЂРѕСЃС‚Рѕ Р·Р°С‚РєРЅРёСЃСЊ Рё РµР·Р¶Р°Р№. РћРЅР° РѕС‚РІРµС‡Р°РµС‚: В«РЈС…, РѕРє?В»
 
-Следующая часть, вероятно, в воскресенье (или в субботу для людей, живущих в АН).
+РЎР»РµРґСѓСЋС‰Р°СЏ С‡Р°СЃС‚СЊ, РІРµСЂРѕСЏС‚РЅРѕ, РІ РІРѕСЃРєСЂРµСЃРµРЅСЊРµ (РёР»Рё РІ СЃСѓР±Р±РѕС‚Сѓ РґР»СЏ Р»СЋРґРµР№, Р¶РёРІСѓС‰РёС… РІ РђРќ).
 
