--- a/1/NoahEdar0483/99685-the-cross-country-peeing-nightmare/rus.textile
+++ b/1/NoahEdar0483/99685-the-cross-country-peeing-nightmare/rus.textile
@@ -1,88 +1,88 @@
-Кошмар с мочой по пересечённой местности
+РљРѕС€РјР°СЂ СЃ РјРѕС‡РѕР№ РїРѕ РїРµСЂРµСЃРµС‡С‘РЅРЅРѕР№ РјРµСЃС‚РЅРѕСЃС‚Рё
 
-Автор: NoahEdar0483
+РђРІС‚РѕСЂ: NoahEdar0483
 
 *000*04.04.2024 12:37
 
-Всем привет! У меня есть ещё одна история, которой я хочу поделиться со всеми вами! Частично это было вдохновлено моим опытом занятий кросс-кантри в старшей школе. Вероятно, это займёт две или три главы, и да, без лишних слов, вот оно, хаха.
+Р’СЃРµРј РїСЂРёРІРµС‚! РЈ РјРµРЅСЏ РµСЃС‚СЊ РµС‰С‘ РѕРґРЅР° РёСЃС‚РѕСЂРёСЏ, РєРѕС‚РѕСЂРѕР№ СЏ С…РѕС‡Сѓ РїРѕРґРµР»РёС‚СЊСЃСЏ СЃРѕ РІСЃРµРјРё РІР°РјРё! Р§Р°СЃС‚РёС‡РЅРѕ СЌС‚Рѕ Р±С‹Р»Рѕ РІРґРѕС…РЅРѕРІР»РµРЅРѕ РјРѕРёРј РѕРїС‹С‚РѕРј Р·Р°РЅСЏС‚РёР№ РєСЂРѕСЃСЃ-РєР°РЅС‚СЂРё РІ СЃС‚Р°СЂС€РµР№ С€РєРѕР»Рµ. Р’РµСЂРѕСЏС‚РЅРѕ, СЌС‚Рѕ Р·Р°Р№РјС‘С‚ РґРІРµ РёР»Рё С‚СЂРё РіР»Р°РІС‹, Рё РґР°, Р±РµР· Р»РёС€РЅРёС… СЃР»РѕРІ, РІРѕС‚ РѕРЅРѕ, С…Р°С…Р°.
 
-(Иногда у меня плохо получается с предисловиями, лол)
+(РРЅРѕРіРґР° Сѓ РјРµРЅСЏ РїР»РѕС…Рѕ РїРѕР»СѓС‡Р°РµС‚СЃСЏ СЃ РїСЂРµРґРёСЃР»РѕРІРёСЏРјРё, Р»РѕР»)
 
-Глава 1
+Р“Р»Р°РІР° 1
 
-Жозефина была девушкой, на первый взгляд не похожей на спортивный тип. Несмотря на то, что она была бесспорно красива, с длинными золотистыми волосами и зелёными глазами, сиявшими, как изумруды, она также была чрезвычайно миниатюрной: её рост составлял всего 150 сантиметров (4 фута 11 дюймов), а вес - всего 50 килограммов (110 фунтов). Однако, несмотря на её небольшой размер, её превосходство на трассе было просто непревзойдённым среди всей её университетской команды по кроссу. Её успехи на любом поле могли превзойти даже некоторых бегунов-мужчин. Однако, чтобы поддерживать себя в хорошей форме перед каждым забегом, она, как и все бегуны, старалась пить достаточно жидкости.
+Р–РѕР·РµС„РёРЅР° Р±С‹Р»Р° РґРµРІСѓС€РєРѕР№, РЅР° РїРµСЂРІС‹Р№ РІР·РіР»СЏРґ РЅРµ РїРѕС…РѕР¶РµР№ РЅР° СЃРїРѕСЂС‚РёРІРЅС‹Р№ С‚РёРї. РќРµСЃРјРѕС‚СЂСЏ РЅР° С‚Рѕ, С‡С‚Рѕ РѕРЅР° Р±С‹Р»Р° Р±РµСЃСЃРїРѕСЂРЅРѕ РєСЂР°СЃРёРІР°, СЃ РґР»РёРЅРЅС‹РјРё Р·РѕР»РѕС‚РёСЃС‚С‹РјРё РІРѕР»РѕСЃР°РјРё Рё Р·РµР»С‘РЅС‹РјРё РіР»Р°Р·Р°РјРё, СЃРёСЏРІС€РёРјРё, РєР°Рє РёР·СѓРјСЂСѓРґС‹, РѕРЅР° С‚Р°РєР¶Рµ Р±С‹Р»Р° С‡СЂРµР·РІС‹С‡Р°Р№РЅРѕ РјРёРЅРёР°С‚СЋСЂРЅРѕР№: РµС‘ СЂРѕСЃС‚ СЃРѕСЃС‚Р°РІР»СЏР» РІСЃРµРіРѕ 150 СЃР°РЅС‚РёРјРµС‚СЂРѕРІ (4 С„СѓС‚Р° 11 РґСЋР№РјРѕРІ), Р° РІРµСЃ - РІСЃРµРіРѕ 50 РєРёР»РѕРіСЂР°РјРјРѕРІ (110 С„СѓРЅС‚РѕРІ). РћРґРЅР°РєРѕ, РЅРµСЃРјРѕС‚СЂСЏ РЅР° РµС‘ РЅРµР±РѕР»СЊС€РѕР№ СЂР°Р·РјРµСЂ, РµС‘ РїСЂРµРІРѕСЃС…РѕРґСЃС‚РІРѕ РЅР° С‚СЂР°СЃСЃРµ Р±С‹Р»Рѕ РїСЂРѕСЃС‚Рѕ РЅРµРїСЂРµРІР·РѕР№РґС‘РЅРЅС‹Рј СЃСЂРµРґРё РІСЃРµР№ РµС‘ СѓРЅРёРІРµСЂСЃРёС‚РµС‚СЃРєРѕР№ РєРѕРјР°РЅРґС‹ РїРѕ РєСЂРѕСЃСЃСѓ. Р•С‘ СѓСЃРїРµС…Рё РЅР° Р»СЋР±РѕРј РїРѕР»Рµ РјРѕРіР»Рё РїСЂРµРІР·РѕР№С‚Рё РґР°Р¶Рµ РЅРµРєРѕС‚РѕСЂС‹С… Р±РµРіСѓРЅРѕРІ-РјСѓР¶С‡РёРЅ. РћРґРЅР°РєРѕ, С‡С‚РѕР±С‹ РїРѕРґРґРµСЂР¶РёРІР°С‚СЊ СЃРµР±СЏ РІ С…РѕСЂРѕС€РµР№ С„РѕСЂРјРµ РїРµСЂРµРґ РєР°Р¶РґС‹Рј Р·Р°Р±РµРіРѕРј, РѕРЅР°, РєР°Рє Рё РІСЃРµ Р±РµРіСѓРЅС‹, СЃС‚Р°СЂР°Р»Р°СЃСЊ РїРёС‚СЊ РґРѕСЃС‚Р°С‚РѕС‡РЅРѕ Р¶РёРґРєРѕСЃС‚Рё.
 
-В день одной из крупнейших гонок по пересечённой местности во всём штате Жозефина перед походом в школу собрала в свою спортивную сумку несколько напитков. Она пила воду из своей многоразовой бутылки в течение всего дня, а прямо перед тем, как сесть в автобус, чтобы отвезти её на мероприятие, зашла в в*нную. Она спустила шорты, прикрывавшие форменный низ, которым она позже будет хвастаться во время забега, а затем спустила сами штаны, а также тонкие розовые стринги, прежде чем сесть на унитаз. Джо вздохнула с облегчением, когда кристально чистая моча выплеснулась из её уретры в воду внизу. Примерно через 10 секунд её мочевой пузырь был полностью пуст, и, удовлетворившись, она вытерлась, натянула одежду и вышла из туалета.
+Р’ РґРµРЅСЊ РѕРґРЅРѕР№ РёР· РєСЂСѓРїРЅРµР№С€РёС… РіРѕРЅРѕРє РїРѕ РїРµСЂРµСЃРµС‡С‘РЅРЅРѕР№ РјРµСЃС‚РЅРѕСЃС‚Рё РІРѕ РІСЃС‘Рј С€С‚Р°С‚Рµ Р–РѕР·РµС„РёРЅР° РїРµСЂРµРґ РїРѕС…РѕРґРѕРј РІ С€РєРѕР»Сѓ СЃРѕР±СЂР°Р»Р° РІ СЃРІРѕСЋ СЃРїРѕСЂС‚РёРІРЅСѓСЋ СЃСѓРјРєСѓ РЅРµСЃРєРѕР»СЊРєРѕ РЅР°РїРёС‚РєРѕРІ. РћРЅР° РїРёР»Р° РІРѕРґСѓ РёР· СЃРІРѕРµР№ РјРЅРѕРіРѕСЂР°Р·РѕРІРѕР№ Р±СѓС‚С‹Р»РєРё РІ С‚РµС‡РµРЅРёРµ РІСЃРµРіРѕ РґРЅСЏ, Р° РїСЂСЏРјРѕ РїРµСЂРµРґ С‚РµРј, РєР°Рє СЃРµСЃС‚СЊ РІ Р°РІС‚РѕР±СѓСЃ, С‡С‚РѕР±С‹ РѕС‚РІРµР·С‚Рё РµС‘ РЅР° РјРµСЂРѕРїСЂРёСЏС‚РёРµ, Р·Р°С€Р»Р° РІ РІ*РЅРЅСѓСЋ. РћРЅР° СЃРїСѓСЃС‚РёР»Р° С€РѕСЂС‚С‹, РїСЂРёРєСЂС‹РІР°РІС€РёРµ С„РѕСЂРјРµРЅРЅС‹Р№ РЅРёР·, РєРѕС‚РѕСЂС‹Рј РѕРЅР° РїРѕР·Р¶Рµ Р±СѓРґРµС‚ С…РІР°СЃС‚Р°С‚СЊСЃСЏ РІРѕ РІСЂРµРјСЏ Р·Р°Р±РµРіР°, Р° Р·Р°С‚РµРј СЃРїСѓСЃС‚РёР»Р° СЃР°РјРё С€С‚Р°РЅС‹, Р° С‚Р°РєР¶Рµ С‚РѕРЅРєРёРµ СЂРѕР·РѕРІС‹Рµ СЃС‚СЂРёРЅРіРё, РїСЂРµР¶РґРµ С‡РµРј СЃРµСЃС‚СЊ РЅР° СѓРЅРёС‚Р°Р·. Р”Р¶Рѕ РІР·РґРѕС…РЅСѓР»Р° СЃ РѕР±Р»РµРіС‡РµРЅРёРµРј, РєРѕРіРґР° РєСЂРёСЃС‚Р°Р»СЊРЅРѕ С‡РёСЃС‚Р°СЏ РјРѕС‡Р° РІС‹РїР»РµСЃРЅСѓР»Р°СЃСЊ РёР· РµС‘ СѓСЂРµС‚СЂС‹ РІ РІРѕРґСѓ РІРЅРёР·Сѓ. РџСЂРёРјРµСЂРЅРѕ С‡РµСЂРµР· 10 СЃРµРєСѓРЅРґ РµС‘ РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ Р±С‹Р» РїРѕР»РЅРѕСЃС‚СЊСЋ РїСѓСЃС‚, Рё, СѓРґРѕРІР»РµС‚РІРѕСЂРёРІС€РёСЃСЊ, РѕРЅР° РІС‹С‚РµСЂР»Р°СЃСЊ, РЅР°С‚СЏРЅСѓР»Р° РѕРґРµР¶РґСѓ Рё РІС‹С€Р»Р° РёР· С‚СѓР°Р»РµС‚Р°.
 
-Джо пробралась к автобусу очень модной марки под названием «Конлейн». Она нашла удобное место в середине автобуса и села рядом с одной из своих подруг по имени Бет. Она поставила спортивную сумку и достала бутылку Gatorade объёмом 600 мл. Не считая той, которая у неё уже была, в спортивной сумке находились три Gatorade, полдюжины бутылок с водой, кофе и немного апельсинового сока. Ещё до того, как автобус тронулся, Джо без колебаний проглотила Gatorade. Это был «Лимон-Лайм», один из её любимых. Затем автобус тронулся, и она расслабилась и потягивала кофе, пока автобус тащил её и её команду к большому событию.
+Р”Р¶Рѕ РїСЂРѕР±СЂР°Р»Р°СЃСЊ Рє Р°РІС‚РѕР±СѓСЃСѓ РѕС‡РµРЅСЊ РјРѕРґРЅРѕР№ РјР°СЂРєРё РїРѕРґ РЅР°Р·РІР°РЅРёРµРј В«РљРѕРЅР»РµР№РЅВ». РћРЅР° РЅР°С€Р»Р° СѓРґРѕР±РЅРѕРµ РјРµСЃС‚Рѕ РІ СЃРµСЂРµРґРёРЅРµ Р°РІС‚РѕР±СѓСЃР° Рё СЃРµР»Р° СЂСЏРґРѕРј СЃ РѕРґРЅРѕР№ РёР· СЃРІРѕРёС… РїРѕРґСЂСѓРі РїРѕ РёРјРµРЅРё Р‘РµС‚. РћРЅР° РїРѕСЃС‚Р°РІРёР»Р° СЃРїРѕСЂС‚РёРІРЅСѓСЋ СЃСѓРјРєСѓ Рё РґРѕСЃС‚Р°Р»Р° Р±СѓС‚С‹Р»РєСѓ Gatorade РѕР±СЉС‘РјРѕРј 600 РјР». РќРµ СЃС‡РёС‚Р°СЏ С‚РѕР№, РєРѕС‚РѕСЂР°СЏ Сѓ РЅРµС‘ СѓР¶Рµ Р±С‹Р»Р°, РІ СЃРїРѕСЂС‚РёРІРЅРѕР№ СЃСѓРјРєРµ РЅР°С…РѕРґРёР»РёСЃСЊ С‚СЂРё Gatorade, РїРѕР»РґСЋР¶РёРЅС‹ Р±СѓС‚С‹Р»РѕРє СЃ РІРѕРґРѕР№, РєРѕС„Рµ Рё РЅРµРјРЅРѕРіРѕ Р°РїРµР»СЊСЃРёРЅРѕРІРѕРіРѕ СЃРѕРєР°. Р•С‰С‘ РґРѕ С‚РѕРіРѕ, РєР°Рє Р°РІС‚РѕР±СѓСЃ С‚СЂРѕРЅСѓР»СЃСЏ, Р”Р¶Рѕ Р±РµР· РєРѕР»РµР±Р°РЅРёР№ РїСЂРѕРіР»РѕС‚РёР»Р° Gatorade. Р­С‚Рѕ Р±С‹Р» В«Р›РёРјРѕРЅ-Р›Р°Р№РјВ», РѕРґРёРЅ РёР· РµС‘ Р»СЋР±РёРјС‹С…. Р—Р°С‚РµРј Р°РІС‚РѕР±СѓСЃ С‚СЂРѕРЅСѓР»СЃСЏ, Рё РѕРЅР° СЂР°СЃСЃР»Р°Р±РёР»Р°СЃСЊ Рё РїРѕС‚СЏРіРёРІР°Р»Р° РєРѕС„Рµ, РїРѕРєР° Р°РІС‚РѕР±СѓСЃ С‚Р°С‰РёР» РµС‘ Рё РµС‘ РєРѕРјР°РЅРґСѓ Рє Р±РѕР»СЊС€РѕРјСѓ СЃРѕР±С‹С‚РёСЋ.
 
-Во время поездки Джо открыла телефон и пролистал страницы социальных сетей. В её личных сообщениях было показано бесконечное количество парней, и она просматривала их одного за другим, всё больше разочаровываясь, поскольку ни один из них её не интересовал. Там была парочка симпатичных парней, но она тем не менее просто пролистнула мимо. Было также несколько женщин, которые написали ей в Директ, и она не могла не чувствовать лёгкого раскаяния. Хотя она определённо поддерживала права ЛГБТ, сама Джо была цисгендером и поэтому не интересовалась встречами того же пола.
+Р’Рѕ РІСЂРµРјСЏ РїРѕРµР·РґРєРё Р”Р¶Рѕ РѕС‚РєСЂС‹Р»Р° С‚РµР»РµС„РѕРЅ Рё РїСЂРѕР»РёСЃС‚Р°Р» СЃС‚СЂР°РЅРёС†С‹ СЃРѕС†РёР°Р»СЊРЅС‹С… СЃРµС‚РµР№. Р’ РµС‘ Р»РёС‡РЅС‹С… СЃРѕРѕР±С‰РµРЅРёСЏС… Р±С‹Р»Рѕ РїРѕРєР°Р·Р°РЅРѕ Р±РµСЃРєРѕРЅРµС‡РЅРѕРµ РєРѕР»РёС‡РµСЃС‚РІРѕ РїР°СЂРЅРµР№, Рё РѕРЅР° РїСЂРѕСЃРјР°С‚СЂРёРІР°Р»Р° РёС… РѕРґРЅРѕРіРѕ Р·Р° РґСЂСѓРіРёРј, РІСЃС‘ Р±РѕР»СЊС€Рµ СЂР°Р·РѕС‡Р°СЂРѕРІС‹РІР°СЏСЃСЊ, РїРѕСЃРєРѕР»СЊРєСѓ РЅРё РѕРґРёРЅ РёР· РЅРёС… РµС‘ РЅРµ РёРЅС‚РµСЂРµСЃРѕРІР°Р». РўР°Рј Р±С‹Р»Р° РїР°СЂРѕС‡РєР° СЃРёРјРїР°С‚РёС‡РЅС‹С… РїР°СЂРЅРµР№, РЅРѕ РѕРЅР° С‚РµРј РЅРµ РјРµРЅРµРµ РїСЂРѕСЃС‚Рѕ РїСЂРѕР»РёСЃС‚РЅСѓР»Р° РјРёРјРѕ. Р‘С‹Р»Рѕ С‚Р°РєР¶Рµ РЅРµСЃРєРѕР»СЊРєРѕ Р¶РµРЅС‰РёРЅ, РєРѕС‚РѕСЂС‹Рµ РЅР°РїРёСЃР°Р»Рё РµР№ РІ Р”РёСЂРµРєС‚, Рё РѕРЅР° РЅРµ РјРѕРіР»Р° РЅРµ С‡СѓРІСЃС‚РІРѕРІР°С‚СЊ Р»С‘РіРєРѕРіРѕ СЂР°СЃРєР°СЏРЅРёСЏ. РҐРѕС‚СЏ РѕРЅР° РѕРїСЂРµРґРµР»С‘РЅРЅРѕ РїРѕРґРґРµСЂР¶РёРІР°Р»Р° РїСЂР°РІР° Р›Р“Р‘Рў, СЃР°РјР° Р”Р¶Рѕ Р±С‹Р»Р° С†РёСЃРіРµРЅРґРµСЂРѕРј Рё РїРѕСЌС‚РѕРјСѓ РЅРµ РёРЅС‚РµСЂРµСЃРѕРІР°Р»Р°СЃСЊ РІСЃС‚СЂРµС‡Р°РјРё С‚РѕРіРѕ Р¶Рµ РїРѕР»Р°.
 
-Она продолжала пить и, взглянув на свою спортивную сумку, заметила, что пустых бутылок там гораздо больше, чем было раньше. Точнее, она выпила кофе, апельсиновый сок, три бутылки и одну бутылку Gatorade. Она положила руку на живот, чувствуя, как жидкость плещется в её кишечнике. Однако она не почувствовала позыва в туалет и продолжила листать страницы в социальных сетях.
+РћРЅР° РїСЂРѕРґРѕР»Р¶Р°Р»Р° РїРёС‚СЊ Рё, РІР·РіР»СЏРЅСѓРІ РЅР° СЃРІРѕСЋ СЃРїРѕСЂС‚РёРІРЅСѓСЋ СЃСѓРјРєСѓ, Р·Р°РјРµС‚РёР»Р°, С‡С‚Рѕ РїСѓСЃС‚С‹С… Р±СѓС‚С‹Р»РѕРє С‚Р°Рј РіРѕСЂР°Р·РґРѕ Р±РѕР»СЊС€Рµ, С‡РµРј Р±С‹Р»Рѕ СЂР°РЅСЊС€Рµ. РўРѕС‡РЅРµРµ, РѕРЅР° РІС‹РїРёР»Р° РєРѕС„Рµ, Р°РїРµР»СЊСЃРёРЅРѕРІС‹Р№ СЃРѕРє, С‚СЂРё Р±СѓС‚С‹Р»РєРё Рё РѕРґРЅСѓ Р±СѓС‚С‹Р»РєСѓ Gatorade. РћРЅР° РїРѕР»РѕР¶РёР»Р° СЂСѓРєСѓ РЅР° Р¶РёРІРѕС‚, С‡СѓРІСЃС‚РІСѓСЏ, РєР°Рє Р¶РёРґРєРѕСЃС‚СЊ РїР»РµС‰РµС‚СЃСЏ РІ РµС‘ РєРёС€РµС‡РЅРёРєРµ. РћРґРЅР°РєРѕ РѕРЅР° РЅРµ РїРѕС‡СѓРІСЃС‚РІРѕРІР°Р»Р° РїРѕР·С‹РІР° РІ С‚СѓР°Р»РµС‚ Рё РїСЂРѕРґРѕР»Р¶РёР»Р° Р»РёСЃС‚Р°С‚СЊ СЃС‚СЂР°РЅРёС†С‹ РІ СЃРѕС†РёР°Р»СЊРЅС‹С… СЃРµС‚СЏС….
 
-Примерно через час после начала поездки автобус внезапно остановился. Джо огляделся и обнаружил, что команда сделала остановку на заправочной станции. Бет отстегнула ремни и встала со своего места. Она повернулась к Джо и спросила: «Эй, ты хочешь пойти со мной на заправку?»
+РџСЂРёРјРµСЂРЅРѕ С‡РµСЂРµР· С‡Р°СЃ РїРѕСЃР»Рµ РЅР°С‡Р°Р»Р° РїРѕРµР·РґРєРё Р°РІС‚РѕР±СѓСЃ РІРЅРµР·Р°РїРЅРѕ РѕСЃС‚Р°РЅРѕРІРёР»СЃСЏ. Р”Р¶Рѕ РѕРіР»СЏРґРµР»СЃСЏ Рё РѕР±РЅР°СЂСѓР¶РёР», С‡С‚Рѕ РєРѕРјР°РЅРґР° СЃРґРµР»Р°Р»Р° РѕСЃС‚Р°РЅРѕРІРєСѓ РЅР° Р·Р°РїСЂР°РІРѕС‡РЅРѕР№ СЃС‚Р°РЅС†РёРё. Р‘РµС‚ РѕС‚СЃС‚РµРіРЅСѓР»Р° СЂРµРјРЅРё Рё РІСЃС‚Р°Р»Р° СЃРѕ СЃРІРѕРµРіРѕ РјРµСЃС‚Р°. РћРЅР° РїРѕРІРµСЂРЅСѓР»Р°СЃСЊ Рє Р”Р¶Рѕ Рё СЃРїСЂРѕСЃРёР»Р°: В«Р­Р№, С‚С‹ С…РѕС‡РµС€СЊ РїРѕР№С‚Рё СЃРѕ РјРЅРѕР№ РЅР° Р·Р°РїСЂР°РІРєСѓ?В»
 
-«О Конечно!» Джо просиял. Две молодые женщины вышли из автобуса и вошли на заправочную станцию. Они осмотрели станцию и увидели большую очередь из её товарищей по команде, выстроившуюся в в*нную.
+В«Рћ РљРѕРЅРµС‡РЅРѕ!В» Р”Р¶Рѕ РїСЂРѕСЃРёСЏР». Р”РІРµ РјРѕР»РѕРґС‹Рµ Р¶РµРЅС‰РёРЅС‹ РІС‹С€Р»Рё РёР· Р°РІС‚РѕР±СѓСЃР° Рё РІРѕС€Р»Рё РЅР° Р·Р°РїСЂР°РІРѕС‡РЅСѓСЋ СЃС‚Р°РЅС†РёСЋ. РћРЅРё РѕСЃРјРѕС‚СЂРµР»Рё СЃС‚Р°РЅС†РёСЋ Рё СѓРІРёРґРµР»Рё Р±РѕР»СЊС€СѓСЋ РѕС‡РµСЂРµРґСЊ РёР· РµС‘ С‚РѕРІР°СЂРёС‰РµР№ РїРѕ РєРѕРјР°РЅРґРµ, РІС‹СЃС‚СЂРѕРёРІС€СѓСЋСЃСЏ РІ РІ*РЅРЅСѓСЋ.
 
-«Уф, я не хочу ждать этого», — жалуется Бет, на что Джо кивнула в знак согласия. Итак, две девушки решили продолжить осмотр заправочной станции, и по пути Джо взяла невероятно большую бутылку Gatorade, намного большую, чем другие в её спортивной сумке. Они подошли к кассе, заплатили за напитки, а затем посмотрели на очередь. Они подумывали о том, чтобы заняться этим, но в этот момент на заправочной станции раздался громкий голос, практически сотрясший всё это место.
+В«РЈС„, СЏ РЅРµ С…РѕС‡Сѓ Р¶РґР°С‚СЊ СЌС‚РѕРіРѕВ», вЂ” Р¶Р°Р»СѓРµС‚СЃСЏ Р‘РµС‚, РЅР° С‡С‚Рѕ Р”Р¶Рѕ РєРёРІРЅСѓР»Р° РІ Р·РЅР°Рє СЃРѕРіР»Р°СЃРёСЏ. РС‚Р°Рє, РґРІРµ РґРµРІСѓС€РєРё СЂРµС€РёР»Рё РїСЂРѕРґРѕР»Р¶РёС‚СЊ РѕСЃРјРѕС‚СЂ Р·Р°РїСЂР°РІРѕС‡РЅРѕР№ СЃС‚Р°РЅС†РёРё, Рё РїРѕ РїСѓС‚Рё Р”Р¶Рѕ РІР·СЏР»Р° РЅРµРІРµСЂРѕСЏС‚РЅРѕ Р±РѕР»СЊС€СѓСЋ Р±СѓС‚С‹Р»РєСѓ Gatorade, РЅР°РјРЅРѕРіРѕ Р±РѕР»СЊС€СѓСЋ, С‡РµРј РґСЂСѓРіРёРµ РІ РµС‘ СЃРїРѕСЂС‚РёРІРЅРѕР№ СЃСѓРјРєРµ. РћРЅРё РїРѕРґРѕС€Р»Рё Рє РєР°СЃСЃРµ, Р·Р°РїР»Р°С‚РёР»Рё Р·Р° РЅР°РїРёС‚РєРё, Р° Р·Р°С‚РµРј РїРѕСЃРјРѕС‚СЂРµР»Рё РЅР° РѕС‡РµСЂРµРґСЊ. РћРЅРё РїРѕРґСѓРјС‹РІР°Р»Рё Рѕ С‚РѕРј, С‡С‚РѕР±С‹ Р·Р°РЅСЏС‚СЊСЃСЏ СЌС‚РёРј, РЅРѕ РІ СЌС‚РѕС‚ РјРѕРјРµРЅС‚ РЅР° Р·Р°РїСЂР°РІРѕС‡РЅРѕР№ СЃС‚Р°РЅС†РёРё СЂР°Р·РґР°Р»СЃСЏ РіСЂРѕРјРєРёР№ РіРѕР»РѕСЃ, РїСЂР°РєС‚РёС‡РµСЃРєРё СЃРѕС‚СЂСЏСЃС€РёР№ РІСЃС‘ СЌС‚Рѕ РјРµСЃС‚Рѕ.
 
-«ХОРОШО, ДЕВОЧКИ! ВОЗВРАЩАЕМСЯ В ПУТЬ! У НАС НЕТ ВРЕМЕНИ, ПОЭТОМУ ДАВАЙТЕ ДВИЖАТЬСЯ!» – прогудел тренер. Все девочки застонали, но просто пожали плечами и вернулись в автобус, включая Джо и Бет. Пока она шла, Джо чувствовала себя довольно спокойно. В любом случае ей не нужно было так сильно мочиться. Однако, когда автобус тронулся обратно в путь, подкрадывающееся мощное желание заставило Джо дважды подумать, стоит ли так беспечно не ходить в туалет на заправке.
+В«РҐРћР РћРЁРћ, Р”Р•Р’РћР§РљР! Р’РћР—Р’Р РђР©РђР•РњРЎРЇ Р’ РџРЈРўР¬! РЈ РќРђРЎ РќР•Рў Р’Р Р•РњР•РќР, РџРћР­РўРћРњРЈ Р”РђР’РђР™РўР• Р”Р’РР–РђРўР¬РЎРЇ!В» вЂ“ РїСЂРѕРіСѓРґРµР» С‚СЂРµРЅРµСЂ. Р’СЃРµ РґРµРІРѕС‡РєРё Р·Р°СЃС‚РѕРЅР°Р»Рё, РЅРѕ РїСЂРѕСЃС‚Рѕ РїРѕР¶Р°Р»Рё РїР»РµС‡Р°РјРё Рё РІРµСЂРЅСѓР»РёСЃСЊ РІ Р°РІС‚РѕР±СѓСЃ, РІРєР»СЋС‡Р°СЏ Р”Р¶Рѕ Рё Р‘РµС‚. РџРѕРєР° РѕРЅР° С€Р»Р°, Р”Р¶Рѕ С‡СѓРІСЃС‚РІРѕРІР°Р»Р° СЃРµР±СЏ РґРѕРІРѕР»СЊРЅРѕ СЃРїРѕРєРѕР№РЅРѕ. Р’ Р»СЋР±РѕРј СЃР»СѓС‡Р°Рµ РµР№ РЅРµ РЅСѓР¶РЅРѕ Р±С‹Р»Рѕ С‚Р°Рє СЃРёР»СЊРЅРѕ РјРѕС‡РёС‚СЊСЃСЏ. РћРґРЅР°РєРѕ, РєРѕРіРґР° Р°РІС‚РѕР±СѓСЃ С‚СЂРѕРЅСѓР»СЃСЏ РѕР±СЂР°С‚РЅРѕ РІ РїСѓС‚СЊ, РїРѕРґРєСЂР°РґС‹РІР°СЋС‰РµРµСЃСЏ РјРѕС‰РЅРѕРµ Р¶РµР»Р°РЅРёРµ Р·Р°СЃС‚Р°РІРёР»Рѕ Р”Р¶Рѕ РґРІР°Р¶РґС‹ РїРѕРґСѓРјР°С‚СЊ, СЃС‚РѕРёС‚ Р»Рё С‚Р°Рє Р±РµСЃРїРµС‡РЅРѕ РЅРµ С…РѕРґРёС‚СЊ РІ С‚СѓР°Р»РµС‚ РЅР° Р·Р°РїСЂР°РІРєРµ.
 
-Через тридцать минут после выхода с заправки нарастающее желание превратилось в мощный крик, требующий выпустить жидкость, скопившуюся между ног Джо. Она крепко свела бёдра вместе и начала ёрзать. Она посмотрела на свою спортивную сумку и увидела неоткрытые бутылки, влажную субстанцию, которая насмехалась над ней, заставляя её скользить по пищеводу и усиливая её растущую агонию, делала ситуацию ещё хуже. Она также видела пустые бутылки, и искушение снова наполнить их жидкостями своего тела было сильным, но она не хотела, чтобы кто-нибудь потенциально это увидел. Десять минут спустя Бет посмотрела на неё, так как она так сильно ёрзала.
+Р§РµСЂРµР· С‚СЂРёРґС†Р°С‚СЊ РјРёРЅСѓС‚ РїРѕСЃР»Рµ РІС‹С…РѕРґР° СЃ Р·Р°РїСЂР°РІРєРё РЅР°СЂР°СЃС‚Р°СЋС‰РµРµ Р¶РµР»Р°РЅРёРµ РїСЂРµРІСЂР°С‚РёР»РѕСЃСЊ РІ РјРѕС‰РЅС‹Р№ РєСЂРёРє, С‚СЂРµР±СѓСЋС‰РёР№ РІС‹РїСѓСЃС‚РёС‚СЊ Р¶РёРґРєРѕСЃС‚СЊ, СЃРєРѕРїРёРІС€СѓСЋСЃСЏ РјРµР¶РґСѓ РЅРѕРі Р”Р¶Рѕ. РћРЅР° РєСЂРµРїРєРѕ СЃРІРµР»Р° Р±С‘РґСЂР° РІРјРµСЃС‚Рµ Рё РЅР°С‡Р°Р»Р° С‘СЂР·Р°С‚СЊ. РћРЅР° РїРѕСЃРјРѕС‚СЂРµР»Р° РЅР° СЃРІРѕСЋ СЃРїРѕСЂС‚РёРІРЅСѓСЋ СЃСѓРјРєСѓ Рё СѓРІРёРґРµР»Р° РЅРµРѕС‚РєСЂС‹С‚С‹Рµ Р±СѓС‚С‹Р»РєРё, РІР»Р°Р¶РЅСѓСЋ СЃСѓР±СЃС‚Р°РЅС†РёСЋ, РєРѕС‚РѕСЂР°СЏ РЅР°СЃРјРµС…Р°Р»Р°СЃСЊ РЅР°Рґ РЅРµР№, Р·Р°СЃС‚Р°РІР»СЏСЏ РµС‘ СЃРєРѕР»СЊР·РёС‚СЊ РїРѕ РїРёС‰РµРІРѕРґСѓ Рё СѓСЃРёР»РёРІР°СЏ РµС‘ СЂР°СЃС‚СѓС‰СѓСЋ Р°РіРѕРЅРёСЋ, РґРµР»Р°Р»Р° СЃРёС‚СѓР°С†РёСЋ РµС‰С‘ С…СѓР¶Рµ. РћРЅР° С‚Р°РєР¶Рµ РІРёРґРµР»Р° РїСѓСЃС‚С‹Рµ Р±СѓС‚С‹Р»РєРё, Рё РёСЃРєСѓС€РµРЅРёРµ СЃРЅРѕРІР° РЅР°РїРѕР»РЅРёС‚СЊ РёС… Р¶РёРґРєРѕСЃС‚СЏРјРё СЃРІРѕРµРіРѕ С‚РµР»Р° Р±С‹Р»Рѕ СЃРёР»СЊРЅС‹Рј, РЅРѕ РѕРЅР° РЅРµ С…РѕС‚РµР»Р°, С‡С‚РѕР±С‹ РєС‚Рѕ-РЅРёР±СѓРґСЊ РїРѕС‚РµРЅС†РёР°Р»СЊРЅРѕ СЌС‚Рѕ СѓРІРёРґРµР». Р”РµСЃСЏС‚СЊ РјРёРЅСѓС‚ СЃРїСѓСЃС‚СЏ Р‘РµС‚ РїРѕСЃРјРѕС‚СЂРµР»Р° РЅР° РЅРµС‘, С‚Р°Рє РєР°Рє РѕРЅР° С‚Р°Рє СЃРёР»СЊРЅРѕ С‘СЂР·Р°Р»Р°.
 
-— Привет, Джо, ты… ты в порядке? — спросила Бет. Джо, почувствовав, что причиной её вопроса было её ёрзание, положила руки на скрещённые колени, временно прекратив ёрзание.
+вЂ” РџСЂРёРІРµС‚, Р”Р¶Рѕ, С‚С‹вЂ¦ С‚С‹ РІ РїРѕСЂСЏРґРєРµ? вЂ” СЃРїСЂРѕСЃРёР»Р° Р‘РµС‚. Р”Р¶Рѕ, РїРѕС‡СѓРІСЃС‚РІРѕРІР°РІ, С‡С‚Рѕ РїСЂРёС‡РёРЅРѕР№ РµС‘ РІРѕРїСЂРѕСЃР° Р±С‹Р»Рѕ РµС‘ С‘СЂР·Р°РЅРёРµ, РїРѕР»РѕР¶РёР»Р° СЂСѓРєРё РЅР° СЃРєСЂРµС‰С‘РЅРЅС‹Рµ РєРѕР»РµРЅРё, РІСЂРµРјРµРЅРЅРѕ РїСЂРµРєСЂР°С‚РёРІ С‘СЂР·Р°РЅРёРµ.
 
-«Ой, извини… мне просто нужно немного пописить», — солгала она, желание явно не было «маленьким». Бет слегка неубедительно взглянула и указала на заднюю часть автобуса. «Там сзади есть туалет».
+В«РћР№, РёР·РІРёРЅРёвЂ¦ РјРЅРµ РїСЂРѕСЃС‚Рѕ РЅСѓР¶РЅРѕ РЅРµРјРЅРѕРіРѕ РїРѕРїРёСЃРёС‚СЊВ», вЂ” СЃРѕР»РіР°Р»Р° РѕРЅР°, Р¶РµР»Р°РЅРёРµ СЏРІРЅРѕ РЅРµ Р±С‹Р»Рѕ В«РјР°Р»РµРЅСЊРєРёРјВ». Р‘РµС‚ СЃР»РµРіРєР° РЅРµСѓР±РµРґРёС‚РµР»СЊРЅРѕ РІР·РіР»СЏРЅСѓР»Р° Рё СѓРєР°Р·Р°Р»Р° РЅР° Р·Р°РґРЅСЋСЋ С‡Р°СЃС‚СЊ Р°РІС‚РѕР±СѓСЃР°. В«РўР°Рј СЃР·Р°РґРё РµСЃС‚СЊ С‚СѓР°Р»РµС‚В».
 
-Джо нервно хихикнула. «Ох, как глупо с моей стороны! Конечно, выпустите меня, пожалуйста.
+Р”Р¶Рѕ РЅРµСЂРІРЅРѕ С…РёС…РёРєРЅСѓР»Р°. В«РћС…, РєР°Рє РіР»СѓРїРѕ СЃ РјРѕРµР№ СЃС‚РѕСЂРѕРЅС‹! РљРѕРЅРµС‡РЅРѕ, РІС‹РїСѓСЃС‚РёС‚Рµ РјРµРЅСЏ, РїРѕР¶Р°Р»СѓР№СЃС‚Р°.
 
-Бет поднялась со своего места, позволив Джо дойти до среднего прохода и пройти в заднюю часть автобуса. Ей хотелось прижать руку к промежности, но она удержалась от этого. Добравшись до двери в*нной, она потянула её, но, к её замешательству и ужасу, она была заперта! Она подняла глаза и увидела табличку с надписью «Извините!». Ванная комната в это время не работает! Спасибо за Ваше понимание! Сразу после текста там был глупый, фальшивый, немного жуткий и раздражающий смайлик. Джо съёжилась, сбросила смайлик и медленно вернулась на своё место.
+Р‘РµС‚ РїРѕРґРЅСЏР»Р°СЃСЊ СЃРѕ СЃРІРѕРµРіРѕ РјРµСЃС‚Р°, РїРѕР·РІРѕР»РёРІ Р”Р¶Рѕ РґРѕР№С‚Рё РґРѕ СЃСЂРµРґРЅРµРіРѕ РїСЂРѕС…РѕРґР° Рё РїСЂРѕР№С‚Рё РІ Р·Р°РґРЅСЋСЋ С‡Р°СЃС‚СЊ Р°РІС‚РѕР±СѓСЃР°. Р•Р№ С…РѕС‚РµР»РѕСЃСЊ РїСЂРёР¶Р°С‚СЊ СЂСѓРєСѓ Рє РїСЂРѕРјРµР¶РЅРѕСЃС‚Рё, РЅРѕ РѕРЅР° СѓРґРµСЂР¶Р°Р»Р°СЃСЊ РѕС‚ СЌС‚РѕРіРѕ. Р”РѕР±СЂР°РІС€РёСЃСЊ РґРѕ РґРІРµСЂРё РІ*РЅРЅРѕР№, РѕРЅР° РїРѕС‚СЏРЅСѓР»Р° РµС‘, РЅРѕ, Рє РµС‘ Р·Р°РјРµС€Р°С‚РµР»СЊСЃС‚РІСѓ Рё СѓР¶Р°СЃСѓ, РѕРЅР° Р±С‹Р»Р° Р·Р°РїРµСЂС‚Р°! РћРЅР° РїРѕРґРЅСЏР»Р° РіР»Р°Р·Р° Рё СѓРІРёРґРµР»Р° С‚Р°Р±Р»РёС‡РєСѓ СЃ РЅР°РґРїРёСЃСЊСЋ В«РР·РІРёРЅРёС‚Рµ!В». Р’Р°РЅРЅР°СЏ РєРѕРјРЅР°С‚Р° РІ СЌС‚Рѕ РІСЂРµРјСЏ РЅРµ СЂР°Р±РѕС‚Р°РµС‚! РЎРїР°СЃРёР±Рѕ Р·Р° Р’Р°С€Рµ РїРѕРЅРёРјР°РЅРёРµ! РЎСЂР°Р·Сѓ РїРѕСЃР»Рµ С‚РµРєСЃС‚Р° С‚Р°Рј Р±С‹Р» РіР»СѓРїС‹Р№, С„Р°Р»СЊС€РёРІС‹Р№, РЅРµРјРЅРѕРіРѕ Р¶СѓС‚РєРёР№ Рё СЂР°Р·РґСЂР°Р¶Р°СЋС‰РёР№ СЃРјР°Р№Р»РёРє. Р”Р¶Рѕ СЃСЉС‘Р¶РёР»Р°СЃСЊ, СЃР±СЂРѕСЃРёР»Р° СЃРјР°Р№Р»РёРє Рё РјРµРґР»РµРЅРЅРѕ РІРµСЂРЅСѓР»Р°СЃСЊ РЅР° СЃРІРѕС‘ РјРµСЃС‚Рѕ.
 
-— Оно вышло из строя, — пробормотала Джо с досадным выражением лица. Бет нахмурилась в ответ.
+вЂ” РћРЅРѕ РІС‹С€Р»Рѕ РёР· СЃС‚СЂРѕСЏ, вЂ” РїСЂРѕР±РѕСЂРјРѕС‚Р°Р»Р° Р”Р¶Рѕ СЃ РґРѕСЃР°РґРЅС‹Рј РІС‹СЂР°Р¶РµРЅРёРµРј Р»РёС†Р°. Р‘РµС‚ РЅР°С…РјСѓСЂРёР»Р°СЃСЊ РІ РѕС‚РІРµС‚.
 
-«Мне жаль, Джо. Эй, если это тебя утешит, то мы должны быть довольно близко к месту мероприятия, и там должно быть много переносных горшков, которыми ты сможешь воспользоваться!
+В«РњРЅРµ Р¶Р°Р»СЊ, Р”Р¶Рѕ. Р­Р№, РµСЃР»Рё СЌС‚Рѕ С‚РµР±СЏ СѓС‚РµС€РёС‚, С‚Рѕ РјС‹ РґРѕР»Р¶РЅС‹ Р±С‹С‚СЊ РґРѕРІРѕР»СЊРЅРѕ Р±Р»РёР·РєРѕ Рє РјРµСЃС‚Сѓ РјРµСЂРѕРїСЂРёСЏС‚РёСЏ, Рё С‚Р°Рј РґРѕР»Р¶РЅРѕ Р±С‹С‚СЊ РјРЅРѕРіРѕ РїРµСЂРµРЅРѕСЃРЅС‹С… РіРѕСЂС€РєРѕРІ, РєРѕС‚РѕСЂС‹РјРё С‚С‹ СЃРјРѕР¶РµС€СЊ РІРѕСЃРїРѕР»СЊР·РѕРІР°С‚СЊСЃСЏ!
 
-«Хех, спасибо», — сказала Джо, улыбаясь, несмотря на растущее желание пописить. Однако в её мыслях пронёсся надвигающийся вопрос. — Подожди, а сколько конкретно времени?
+В«РҐРµС…, СЃРїР°СЃРёР±РѕВ», вЂ” СЃРєР°Р·Р°Р»Р° Р”Р¶Рѕ, СѓР»С‹Р±Р°СЏСЃСЊ, РЅРµСЃРјРѕС‚СЂСЏ РЅР° СЂР°СЃС‚СѓС‰РµРµ Р¶РµР»Р°РЅРёРµ РїРѕРїРёСЃРёС‚СЊ. РћРґРЅР°РєРѕ РІ РµС‘ РјС‹СЃР»СЏС… РїСЂРѕРЅС‘СЃСЃСЏ РЅР°РґРІРёРіР°СЋС‰РёР№СЃСЏ РІРѕРїСЂРѕСЃ. вЂ” РџРѕРґРѕР¶РґРё, Р° СЃРєРѕР»СЊРєРѕ РєРѕРЅРєСЂРµС‚РЅРѕ РІСЂРµРјРµРЅРё?
 
-Бет почесала подбородок. «Я точно не знаю. Дай мне проверить». Она вытащила телефон и посмотрела вдаль на Google Maps. Результат наполнил их глаза шоком и ужасом.
+Р‘РµС‚ РїРѕС‡РµСЃР°Р»Р° РїРѕРґР±РѕСЂРѕРґРѕРє. В«РЇ С‚РѕС‡РЅРѕ РЅРµ Р·РЅР°СЋ. Р”Р°Р№ РјРЅРµ РїСЂРѕРІРµСЂРёС‚СЊВ». РћРЅР° РІС‹С‚Р°С‰РёР»Р° С‚РµР»РµС„РѕРЅ Рё РїРѕСЃРјРѕС‚СЂРµР»Р° РІРґР°Р»СЊ РЅР° Google Maps. Р РµР·СѓР»СЊС‚Р°С‚ РЅР°РїРѕР»РЅРёР» РёС… РіР»Р°Р·Р° С€РѕРєРѕРј Рё СѓР¶Р°СЃРѕРј.
 
-«ТРИ ЧАСА?!» Джо вскрикнула мысленно. Она не могла продержаться так долго!
+В«РўР Р Р§РђРЎРђ?!В» Р”Р¶Рѕ РІСЃРєСЂРёРєРЅСѓР»Р° РјС‹СЃР»РµРЅРЅРѕ. РћРЅР° РЅРµ РјРѕРіР»Р° РїСЂРѕРґРµСЂР¶Р°С‚СЊСЃСЏ С‚Р°Рє РґРѕР»РіРѕ!
 
-«Вот дерьмо! Мне очень жаль, Джо, я думала, это гораздо ближе, — вздохнула Бет.
+В«Р’РѕС‚ РґРµСЂСЊРјРѕ! РњРЅРµ РѕС‡РµРЅСЊ Р¶Р°Р»СЊ, Р”Р¶Рѕ, СЏ РґСѓРјР°Р»Р°, СЌС‚Рѕ РіРѕСЂР°Р·РґРѕ Р±Р»РёР¶Рµ, вЂ” РІР·РґРѕС…РЅСѓР»Р° Р‘РµС‚.
 
-— Что ж… спасибо за попытку, — успокоил её Джо. «Это… это даже не так уж и плохо. Честный».
+вЂ” Р§С‚Рѕ Р¶вЂ¦ СЃРїР°СЃРёР±Рѕ Р·Р° РїРѕРїС‹С‚РєСѓ, вЂ” СѓСЃРїРѕРєРѕРёР» РµС‘ Р”Р¶Рѕ. В«Р­С‚РѕвЂ¦ СЌС‚Рѕ РґР°Р¶Рµ РЅРµ С‚Р°Рє СѓР¶ Рё РїР»РѕС…Рѕ. Р§РµСЃС‚РЅС‹Р№В».
 
-«Вы уверены? Ты выглядишь так, будто страдаешь, — заметила Бет. Джо издал лёгкий смешок.
+В«Р’С‹ СѓРІРµСЂРµРЅС‹? РўС‹ РІС‹РіР»СЏРґРёС€СЊ С‚Р°Рє, Р±СѓРґС‚Рѕ СЃС‚СЂР°РґР°РµС€СЊ, вЂ” Р·Р°РјРµС‚РёР»Р° Р‘РµС‚. Р”Р¶Рѕ РёР·РґР°Р» Р»С‘РіРєРёР№ СЃРјРµС€РѕРє.
 
-«ЭТО ПОТОМУ ЧТО Я СТРАДАЮ!!!» — воскликнула Джо в уме. Однако она прикусила губу и ответила: «Да… со мной всё будет в порядке… по крайней мере, сейчас».
+В«Р­РўРћ РџРћРўРћРњРЈ Р§РўРћ РЇ РЎРўР РђР”РђР®!!!В» вЂ” РІРѕСЃРєР»РёРєРЅСѓР»Р° Р”Р¶Рѕ РІ СѓРјРµ. РћРґРЅР°РєРѕ РѕРЅР° РїСЂРёРєСѓСЃРёР»Р° РіСѓР±Сѓ Рё РѕС‚РІРµС‚РёР»Р°: В«Р”Р°вЂ¦ СЃРѕ РјРЅРѕР№ РІСЃС‘ Р±СѓРґРµС‚ РІ РїРѕСЂСЏРґРєРµвЂ¦ РїРѕ РєСЂР°Р№РЅРµР№ РјРµСЂРµ, СЃРµР№С‡Р°СЃВ».
 
 *005*04.04.2024 18:12
 
-{{3 часа назад, WiiGuy86 сказал:
+{{3 С‡Р°СЃР° РЅР°Р·Р°Рґ, WiiGuy86 СЃРєР°Р·Р°Р»:
 
-Отличное начало! Не могу дождаться, чтобы увидеть, к чему это приведёт!
-
-}}
-
-{{2 часа назад,грязныйтоммис сказал:
-
-Отличное начало!
+РћС‚Р»РёС‡РЅРѕРµ РЅР°С‡Р°Р»Рѕ! РќРµ РјРѕРіСѓ РґРѕР¶РґР°С‚СЊСЃСЏ, С‡С‚РѕР±С‹ СѓРІРёРґРµС‚СЊ, Рє С‡РµРјСѓ СЌС‚Рѕ РїСЂРёРІРµРґС‘С‚!
 
 }}
 
-{{2 часа назад, OldWetGuy сказал:
+{{2 С‡Р°СЃР° РЅР°Р·Р°Рґ,РіСЂСЏР·РЅС‹Р№С‚РѕРјРјРёСЃ СЃРєР°Р·Р°Р»:
 
-Вы имеете мой интерес и внимание.
-
-}}
-
-Большое спасибо! Я постараюсь закончить следующую главу как можно скорее. 
-
-{{2 часа назад, Diddlysquat88 сказал:
-
-Наверняка через 3 часа отчаявшихся людей будет больше… не могу дождаться следующей части!
+РћС‚Р»РёС‡РЅРѕРµ РЅР°С‡Р°Р»Рѕ!
 
 }}
 
-О, да. Это будет чертовски крутая поездка на автобусе, это всё, что я могу сказать, хе-хе.
+{{2 С‡Р°СЃР° РЅР°Р·Р°Рґ, OldWetGuy СЃРєР°Р·Р°Р»:
+
+Р’С‹ РёРјРµРµС‚Рµ РјРѕР№ РёРЅС‚РµСЂРµСЃ Рё РІРЅРёРјР°РЅРёРµ.
+
+}}
+
+Р‘РѕР»СЊС€РѕРµ СЃРїР°СЃРёР±Рѕ! РЇ РїРѕСЃС‚Р°СЂР°СЋСЃСЊ Р·Р°РєРѕРЅС‡РёС‚СЊ СЃР»РµРґСѓСЋС‰СѓСЋ РіР»Р°РІСѓ РєР°Рє РјРѕР¶РЅРѕ СЃРєРѕСЂРµРµ. 
+
+{{2 С‡Р°СЃР° РЅР°Р·Р°Рґ, Diddlysquat88 СЃРєР°Р·Р°Р»:
+
+РќР°РІРµСЂРЅСЏРєР° С‡РµСЂРµР· 3 С‡Р°СЃР° РѕС‚С‡Р°СЏРІС€РёС…СЃСЏ Р»СЋРґРµР№ Р±СѓРґРµС‚ Р±РѕР»СЊС€РµвЂ¦ РЅРµ РјРѕРіСѓ РґРѕР¶РґР°С‚СЊСЃСЏ СЃР»РµРґСѓСЋС‰РµР№ С‡Р°СЃС‚Рё!
+
+}}
+
+Рћ, РґР°. Р­С‚Рѕ Р±СѓРґРµС‚ С‡РµСЂС‚РѕРІСЃРєРё РєСЂСѓС‚Р°СЏ РїРѕРµР·РґРєР° РЅР° Р°РІС‚РѕР±СѓСЃРµ, СЌС‚Рѕ РІСЃС‘, С‡С‚Рѕ СЏ РјРѕРіСѓ СЃРєР°Р·Р°С‚СЊ, С…Рµ-С…Рµ.
 
